--- a/index.html
+++ b/index.html
@@ -79,25 +79,35 @@
     <div id="siteWelcome" class="site-welcome active">
         <div class="loading"></div>
     </div>
-    <div class="topNavBar">
+    <div id="topNavBar" class="topNavBar">
         <div class="topNavBar-inner clearfix">
             <a class="logo" href="#" alt="logo" style="float: left;">
                 <span class="rs">RS</span>
                 <span class="card">card</span>
             </a>
-            <nav style="float: right;">
+            <nav class="menu" style="float: right;">
                 <ul class="clearfix">
                     <li>
-                        <a href="#">关于</a>
+                        <a href="#siteAbout">关于</a>
                     </li>
                     <li>
-                        <a href="#">技能</a>
+                        <a href="#siteSkills">技能</a>
                     </li>
                     <li>
-                        <a href="#">作品</a>
+                        <a href="#siteWorks">作品</a>
+                        <ul class="submenu">
+                            <li>作品 1</li>
+                            <li>作品 2</li>
+                            <li>作品 3</li>
+                        </ul>
                     </li>
                     <li>
                         <a href="#">博客</a>
+                        <ul class="submenu">
+                            <li>博客 1</li>
+                            <li>博客 2</li>
+                            <li>博客 3</li>
+                        </ul>
                     </li>
                     <li>
                         <a href="#">日历</a>
@@ -116,7 +126,7 @@
         <div class="mask"></div>
     </div>
     <main>
-        <div class="userCard">
+        <div id="siteAbout" class="userCard">
             <div class="pictureAndText clearfix">
                 <div class="picture">
                     <img src="./img/startuper-hover-1-598x644.jpg" width="299" height="347" alt="头像">
@@ -163,7 +173,7 @@
             技能:前端开发,Rails 开发,Node.js 开发。
         </p>
     </main>
-    <section class="skills">
+    <section id="siteSkills" class="skills">
         <h2>技能</h2>
         <ol class="clearfix">
             <li>
@@ -216,7 +226,7 @@
             </li>
         </ol>
     </section>
-    <section class="portfolio">
+    <section id="siteWorks" class="portfolio">
         <h2>作品集</h2>
         <nav>
             <ol class="clearfix">
@@ -252,7 +262,40 @@
         </div>
     </section>
     <script>
-        siteWelcome.classList.remove('active')
+        setTimeout(function () {
+            siteWelcome.classList.remove('active')
+        }, 1000)
+
+        window.onscroll = function (xxxxx) {
+            if (window.scrollY > 0) {
+                topNavBar.classList.add('sticky')
+            }
+            else {
+                topNavBar.classList.remove('sticky')
+            }
+        }
+
+        let liTags = document.querySelectorAll('nav.menu>ul>li')
+        for (let i = 0; i < liTags.length; i++) {
+            liTags[i].onmouseenter = function (x) {
+                x.currentTarget.classList.add('active')
+            }
+            liTags[i].onmouseleave = function (x) {
+                x.currentTarget.classList.remove('active')
+            }
+        }
+
+        let aTags = document.querySelectorAll('nav.menu>ul>li>a')
+        for (let i = 0; i < aTags.length; i++) {
+            aTags[i].onclick = function (x) {
+                x.preventDefault()
+                let a = x.currentTarget
+                let href = a.getAttribute('href')
+                let element = document.querySelector(href)
+                let top = element.offsetTop
+                window.scrollTo(0, top - 80)
+            }
+        }
     </script>
 </body>
 
