--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     HTML 5 & css 3
                 </h3>
                 <div class="progressBar">
-                    <div class="progress" style="width: 40%;"></div>
+                    <div class="progress" style="width: 10%;"></div>
                 </div>
             </li>
             <li>
@@ -121,7 +121,7 @@
                     JavaScript
                 </h3>
                 <div class="progressBar">
-                    <div class="progress"></div>
+                    <div class="progress" style="width: 20%;"></div>
                 </div>
             </li>
             <li>
@@ -129,7 +129,7 @@
                     jQuery
                 </h3>
                 <div class="progressBar">
-                    <div class="progress"></div>
+                    <div class="progress" style="width: 30%;"></div>
                 </div>
             </li>
             <li>
@@ -137,7 +137,7 @@
                     vue.js
                 </h3>
                 <div class="progressBar">
-                    <div class="progress"></div>
+                    <div class="progress" style="width: 40%;"></div>
                 </div>
             </li>
             <li>
@@ -145,7 +145,7 @@
                     React.js
                 </h3>
                 <div class="progressBar">
-                    <div class="progress"></div>
+                    <div class="progress" style="width: 50%;"></div>
                 </div>
             </li>
             <li>
@@ -153,7 +153,7 @@
                     Node.js
                 </h3>
                 <div class="progressBar">
-                    <div class="progress"></div>
+                    <div class="progress" style="width: 60%;"></div>
                 </div>
             </li>
         </ol>
@@ -190,6 +190,9 @@
             <input type="submit" value="提交">
         </form>
     </section>
+    <script src="./js/base/View.js"></script>
+    <script src="./js/base/Model.js"></script>
+    <script src="./js/base/Controller.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/17.1.1/Tween.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/leancloud-storage@4.15.2/dist/av-min.js"></script>
@@ -198,6 +201,7 @@
     <script src="./js/auto-slide-up.js"></script>
     <script src="./js/sticky-topbar.js"></script>
     <script src="./js/smoothly-navigation.js"></script>
+
 </body>
 
 </html>
