--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
     <div id="topNavBar" class="topNavBar">
         <div class="topNavBar-inner clearfix">
             <a class="logo" href="#" alt="logo" style="float: left;">
-                <span class="rs">RS</span>
-                <span class="card">card</span>
+                <span class="rs">H</span><span class="card">SY</span>
             </a>
-            <nav class="menu" style="float: right;">
+            <nav class="menu">
                 <ul class="clearfix">
                     <li>
                         <a href="#siteAbout">关于</a>
@@ -64,21 +63,21 @@
                     <img src="./img/startuper-hover-1-598x644.jpg" width="299" height="347" alt="头像">
                 </div>
                 <div class="text">
-                    <span class="welcome">Hello
+                    <span class="welcome">你好，我是一名前端工程师
                         <span class="triangle"></span>
                     </span>
                     <h1>胡思宇</h1>
-                    <p>前端开发工程师</p>
+                    <p>前端开发工程师,熟悉 HTML5/CSS3/JavaScript</p>
                     <hr>
                     <dl>
                         <dt>年龄</dt>
-                        <dd>18</dd>
+                        <dd>23</dd>
                         <dt>所在城市</dt>
-                        <dd>北京</dd>
+                        <dd>长沙</dd>
                         <dt>邮箱</dt>
-                        <dd>frangyinghang@foxmail.com</dd>
+                        <dd>cbsm915754957@qq.com</dd>
                         <dt>手机</dt>
-                        <dd>13812345678</dd>
+                        <dd>18975544029</dd>
                     </dl>
                 </div>
             </div>
@@ -100,10 +99,7 @@
         <p class="downloadResume-wrapper">
             <a class="downloadResume" href="./123.pdf" target="_blank" download>下载PDF简历</a>
         </p>
-        <p class="selfintroduction">
-            胡思宇，前端开发工程师。<br>
-            技能:前端开发,Rails 开发,Node.js 开发。
-        </p>
+
     </main>
     <section data-x id="siteSkills" class="skills">
         <h2>技能</h2>
